// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`streamText > errors > should swallow error to prevent server crash 1`] = `[]`;

exports[`streamText > options.experimental_onStart > should send correct information with text prompt 1`] = `
{
  "activeTools": undefined,
  "callId": "test-telemetry-call-id",
  "context": {},
  "frequencyPenalty": undefined,
  "functionId": "test-function",
  "headers": undefined,
  "include": undefined,
  "isEnabled": undefined,
  "maxOutputTokens": undefined,
  "maxRetries": 2,
  "messages": undefined,
  "metadata": {
    "customKey": "customValue",
  },
  "modelId": "mock-model-id",
  "operationId": "ai.streamText",
  "output": undefined,
  "presencePenalty": undefined,
  "prompt": "test-input",
  "provider": "mock-provider",
  "providerOptions": undefined,
  "reasoning": undefined,
  "recordInputs": undefined,
  "recordOutputs": undefined,
  "seed": undefined,
  "stopSequences": undefined,
  "stopWhen": [Function],
  "system": undefined,
  "temperature": undefined,
  "timeout": undefined,
  "toolChoice": undefined,
  "tools": undefined,
  "topK": undefined,
  "topP": undefined,
}
`;

exports[`streamText > options.experimental_onToolCallStart > should be called with correct tool name, id, and input 1`] = `
{
  "callId": "test-telemetry-call-id",
  "context": {},
  "functionId": undefined,
  "messages": [
    {
      "content": "test-input",
      "role": "user",
    },
  ],
  "metadata": undefined,
  "modelId": "mock-model-id",
  "provider": "mock-provider",
  "stepNumber": 0,
  "toolCall": {
    "input": {
      "value": "test-arg",
    },
    "providerExecuted": undefined,
    "providerMetadata": undefined,
    "title": undefined,
    "toolCallId": "call-1",
    "toolName": "tool1",
    "type": "tool-call",
  },
}
`;

exports[`streamText > programmatic tool calling > 5 steps: code_execution triggers client tool across multiple turns (dice game fixture) > step inputs > should include all previous messages in step 5 prompt (final step) 1`] = `
[
  {
    "content": [
      {
        "text": "Play a dice game between two players.",
        "type": "text",
      },
    ],
    "providerOptions": undefined,
    "role": "user",
  },
  {
    "content": [
      {
        "providerOptions": undefined,
        "text": "I'll help you simulate this game between two players where one is using a loaded die.",
        "type": "text",
      },
      {
        "input": {
          "code": "game_loop()",
        },
        "providerExecuted": true,
        "providerOptions": undefined,
        "toolCallId": "srvtoolu_01MzSrFWsmzBdcoQkGWLyRjK",
        "toolName": "code_execution",
        "type": "tool-call",
      },
      {
        "input": {
          "player": "player1",
        },
        "providerExecuted": undefined,
        "providerOptions": undefined,
        "toolCallId": "toolu_019jKkXz4jAdwHweHBw92CVY",
        "toolName": "rollDie",
        "type": "tool-call",
      },
    ],
    "providerOptions": undefined,
    "role": "assistant",
  },
  {
    "content": [
      {
        "output": {
          "type": "json",
          "value": 6,
        },
        "providerOptions": undefined,
        "toolCallId": "toolu_019jKkXz4jAdwHweHBw92CVY",
        "toolName": "rollDie",
        "type": "tool-result",
      },
    ],
    "providerOptions": undefined,
    "role": "tool",
  },
  {
    "content": [
      {
        "input": {
          "player": "player2",
        },
        "providerExecuted": undefined,
        "providerOptions": undefined,
        "toolCallId": "toolu_015dGLMbwBKv1ZRQr6KdJzeH",
        "toolName": "rollDie",
        "type": "tool-call",
      },
    ],
    "providerOptions": undefined,
    "role": "assistant",
  },
  {
    "content": [
      {
        "output": {
          "type": "json",
          "value": 3,
        },
        "providerOptions": undefined,
        "toolCallId": "toolu_015dGLMbwBKv1ZRQr6KdJzeH",
        "toolName": "rollDie",
        "type": "tool-result",
      },
    ],
    "providerOptions": undefined,
    "role": "tool",
  },
  {
    "content": [
      {
        "input": {
          "player": "player1",
        },
        "providerExecuted": undefined,
        "providerOptions": undefined,
        "toolCallId": "toolu_01YYqBNq5mk1wMtv3PAqY44m",
        "toolName": "rollDie",
        "type": "tool-call",
      },
    ],
    "providerOptions": undefined,
    "role": "assistant",
  },
  {
    "content": [
      {
        "output": {
          "type": "json",
          "value": 6,
        },
        "providerOptions": undefined,
        "toolCallId": "toolu_01YYqBNq5mk1wMtv3PAqY44m",
        "toolName": "rollDie",
        "type": "tool-result",
      },
    ],
    "providerOptions": undefined,
    "role": "tool",
  },
  {
    "content": [
      {
        "input": {
          "player": "player2",
        },
        "providerExecuted": undefined,
        "providerOptions": undefined,
        "toolCallId": "toolu_018WxjDkQG8h7i63poySGT2x",
        "toolName": "rollDie",
        "type": "tool-call",
      },
    ],
    "providerOptions": undefined,
    "role": "assistant",
  },
  {
    "content": [
      {
        "output": {
          "type": "json",
          "value": 3,
        },
        "providerOptions": undefined,
        "toolCallId": "toolu_018WxjDkQG8h7i63poySGT2x",
        "toolName": "rollDie",
        "type": "tool-result",
      },
    ],
    "providerOptions": undefined,
    "role": "tool",
  },
]
`;

exports[`streamText > result.files > should contain files 1`] = `
[
  DefaultGeneratedFileWithType {
    "base64Data": "Hello World",
    "mediaType": "text/plain",
    "type": "file",
    "uint8ArrayData": undefined,
  },
  DefaultGeneratedFileWithType {
    "base64Data": "QkFVRw==",
    "mediaType": "image/jpeg",
    "type": "file",
    "uint8ArrayData": undefined,
  },
]
`;

exports[`streamText > result.fullStream > should send delayed asynchronous tool results 1`] = `
[
  {
    "type": "start",
  },
  {
    "request": {},
    "type": "start-step",
    "warnings": [],
  },
  {
    "input": {
      "value": "value",
    },
    "providerExecuted": undefined,
    "providerMetadata": undefined,
    "title": "Tool 1",
    "toolCallId": "call-1",
    "toolName": "tool1",
    "type": "tool-call",
  },
  {
    "dynamic": false,
    "input": {
      "value": "value",
    },
    "output": "value-result",
    "toolCallId": "call-1",
    "toolName": "tool1",
    "type": "tool-result",
  },
  {
    "finishReason": "stop",
    "providerMetadata": undefined,
    "rawFinishReason": "stop",
    "response": {
      "headers": undefined,
      "id": "id-0",
      "modelId": "mock-model-id",
      "timestamp": 1970-01-01T00:00:00.000Z,
    },
    "type": "finish-step",
    "usage": {
      "cachedInputTokens": undefined,
      "inputTokenDetails": {
        "cacheReadTokens": undefined,
        "cacheWriteTokens": undefined,
        "noCacheTokens": 3,
      },
      "inputTokens": 3,
      "outputTokenDetails": {
        "reasoningTokens": undefined,
        "textTokens": 10,
      },
      "outputTokens": 10,
      "raw": undefined,
      "reasoningTokens": undefined,
      "totalTokens": 13,
    },
  },
  {
    "finishReason": "stop",
    "rawFinishReason": "stop",
    "totalUsage": {
      "cachedInputTokens": undefined,
      "inputTokenDetails": {
        "cacheReadTokens": undefined,
        "cacheWriteTokens": undefined,
        "noCacheTokens": 3,
      },
      "inputTokens": 3,
      "outputTokenDetails": {
        "reasoningTokens": undefined,
        "textTokens": 10,
      },
      "outputTokens": 10,
      "reasoningTokens": undefined,
      "totalTokens": 13,
    },
    "type": "finish",
  },
]
`;

exports[`streamText > result.fullStream > should send tool calls 1`] = `
[
  {
    "type": "start",
  },
  {
    "request": {},
    "type": "start-step",
    "warnings": [],
  },
  {
    "input": {
      "value": "value",
    },
    "providerExecuted": undefined,
    "providerMetadata": {
      "testProvider": {
        "signature": "sig",
      },
    },
    "title": "Tool 1",
    "toolCallId": "call-1",
    "toolName": "tool1",
    "type": "tool-call",
  },
  {
    "finishReason": "stop",
    "providerMetadata": undefined,
    "rawFinishReason": "stop",
    "response": {
      "headers": undefined,
      "id": "id-0",
      "modelId": "mock-model-id",
      "timestamp": 1970-01-01T00:00:00.000Z,
    },
    "type": "finish-step",
    "usage": {
      "cachedInputTokens": undefined,
      "inputTokenDetails": {
        "cacheReadTokens": undefined,
        "cacheWriteTokens": undefined,
        "noCacheTokens": 3,
      },
      "inputTokens": 3,
      "outputTokenDetails": {
        "reasoningTokens": undefined,
        "textTokens": 10,
      },
      "outputTokens": 10,
      "raw": undefined,
      "reasoningTokens": undefined,
      "totalTokens": 13,
    },
  },
  {
    "finishReason": "stop",
    "rawFinishReason": "stop",
    "totalUsage": {
      "cachedInputTokens": undefined,
      "inputTokenDetails": {
        "cacheReadTokens": undefined,
        "cacheWriteTokens": undefined,
        "noCacheTokens": 3,
      },
      "inputTokens": 3,
      "outputTokenDetails": {
        "reasoningTokens": undefined,
        "textTokens": 10,
      },
      "outputTokens": 10,
      "reasoningTokens": undefined,
      "totalTokens": 13,
    },
    "type": "finish",
  },
]
`;

exports[`streamText > result.fullStream > should send tool results 1`] = `
[
  {
    "type": "start",
  },
  {
    "request": {},
    "type": "start-step",
    "warnings": [],
  },
  {
    "input": {
      "value": "value",
    },
    "providerExecuted": undefined,
    "providerMetadata": undefined,
    "title": "Tool 1",
    "toolCallId": "call-1",
    "toolName": "tool1",
    "type": "tool-call",
  },
  {
    "dynamic": false,
    "input": {
      "value": "value",
    },
    "output": "value-result",
    "toolCallId": "call-1",
    "toolName": "tool1",
    "type": "tool-result",
  },
  {
    "finishReason": "stop",
    "providerMetadata": undefined,
    "rawFinishReason": "stop",
    "response": {
      "headers": undefined,
      "id": "id-0",
      "modelId": "mock-model-id",
      "timestamp": 1970-01-01T00:00:00.000Z,
    },
    "type": "finish-step",
    "usage": {
      "cachedInputTokens": undefined,
      "inputTokenDetails": {
        "cacheReadTokens": undefined,
        "cacheWriteTokens": undefined,
        "noCacheTokens": 3,
      },
      "inputTokens": 3,
      "outputTokenDetails": {
        "reasoningTokens": undefined,
        "textTokens": 10,
      },
      "outputTokens": 10,
      "raw": undefined,
      "reasoningTokens": undefined,
      "totalTokens": 13,
    },
  },
  {
    "finishReason": "stop",
    "rawFinishReason": "stop",
    "totalUsage": {
      "cachedInputTokens": undefined,
      "inputTokenDetails": {
        "cacheReadTokens": undefined,
        "cacheWriteTokens": undefined,
        "noCacheTokens": 3,
      },
      "inputTokens": 3,
      "outputTokenDetails": {
        "reasoningTokens": undefined,
        "textTokens": 10,
      },
      "outputTokens": 10,
      "reasoningTokens": undefined,
      "totalTokens": 13,
    },
    "type": "finish",
  },
]
`;

exports[`streamText > result.pipeUIMessageStreamToResponse > should mask error messages by default 1`] = `
[
  "data: {"type":"start"}

",
  "data: {"type":"start-step"}

",
  "data: {"type":"error","errorText":"error"}

",
  "data: {"type":"finish-step"}

",
  "data: {"type":"finish","finishReason":"error"}

",
  "data: [DONE]

",
]
`;

exports[`streamText > result.pipeUIMessageStreamToResponse > should support custom error messages 1`] = `
[
  "data: {"type":"start"}

",
  "data: {"type":"start-step"}

",
  "data: {"type":"error","errorText":"custom error message: error"}

",
  "data: {"type":"finish-step"}

",
  "data: {"type":"finish","finishReason":"error"}

",
  "data: [DONE]

",
]
`;

exports[`streamText > result.reasoning > should contain reasoning from model response 1`] = `
[
  {
    "providerMetadata": {
      "testProvider": {
        "signature": "1234567890",
      },
    },
    "text": "I will open the conversation with witty banter.",
    "type": "reasoning",
  },
  {
    "providerMetadata": {
      "testProvider": {
        "redactedData": "redacted-reasoning-data",
      },
    },
    "text": "",
    "type": "reasoning",
  },
  {
    "providerMetadata": {
      "testProvider": {
        "signature": "1234567890",
      },
    },
    "text": " Once the user has relaxed, I will pry for valuable information.",
    "type": "reasoning",
  },
  {
    "providerMetadata": {
      "testProvider": {
        "signature": "0987654321",
      },
    },
    "text": " I need to think about this problem carefully.",
    "type": "reasoning",
  },
  {
    "providerMetadata": {
      "testProvider": {
        "signature": "0987654321",
      },
    },
    "text": " The best solution requires careful consideration of all factors.",
    "type": "reasoning",
  },
]
`;

exports[`streamText > result.reasoningText > should contain reasoning text from model response 1`] = `"I will open the conversation with witty banter. Once the user has relaxed, I will pry for valuable information. I need to think about this problem carefully. The best solution requires careful consideration of all factors."`;

exports[`streamText > result.sources > should contain sources 1`] = `
[
  {
    "id": "123",
    "providerMetadata": {
      "provider": {
        "custom": "value",
      },
    },
    "sourceType": "url",
    "title": "Example",
    "type": "source",
    "url": "https://example.com",
  },
  {
    "id": "456",
    "providerMetadata": {
      "provider": {
        "custom": "value2",
      },
    },
    "sourceType": "url",
    "title": "Example 2",
    "type": "source",
    "url": "https://example.com/2",
  },
]
`;

exports[`streamText > result.text > should resolve with full text 1`] = `"Hello, world!"`;

exports[`streamText > result.textStream > should filter out empty text deltas 1`] = `
[
  "Hello",
  ", ",
  "world!",
]
`;

exports[`streamText > result.textStream > should not include reasoning content in textStream 1`] = `
[
  "Hi",
  " there!",
]
`;

exports[`streamText > result.toUIMessageStream > should mask error messages by default 1`] = `
[
  {
    "type": "start",
  },
  {
    "type": "start-step",
  },
  {
    "errorText": "error",
    "type": "error",
  },
  {
    "type": "finish-step",
  },
  {
    "finishReason": "error",
    "type": "finish",
  },
]
`;

exports[`streamText > result.toUIMessageStream > should send tool call, tool call stream start, tool call deltas, and tool result stream parts 1`] = `
[
  {
    "type": "start",
  },
  {
    "type": "start-step",
  },
  {
    "toolCallId": "call-1",
    "toolName": "tool1",
    "type": "tool-input-start",
  },
  {
    "inputTextDelta": "{ "value":",
    "toolCallId": "call-1",
    "type": "tool-input-delta",
  },
  {
    "inputTextDelta": " "value" }",
    "toolCallId": "call-1",
    "type": "tool-input-delta",
  },
  {
    "input": {
      "value": "value",
    },
    "toolCallId": "call-1",
    "toolName": "tool1",
    "type": "tool-input-available",
  },
  {
    "output": "value-result",
    "toolCallId": "call-1",
    "type": "tool-output-available",
  },
  {
    "type": "finish-step",
  },
  {
    "finishReason": "stop",
    "type": "finish",
  },
]
`;

exports[`streamText > result.toUIMessageStream > should support custom error messages 1`] = `
[
  {
    "type": "start",
  },
  {
    "type": "start-step",
  },
  {
    "errorText": "custom error message: error",
    "type": "error",
  },
  {
    "type": "finish-step",
  },
  {
    "finishReason": "error",
    "type": "finish",
  },
]
`;

exports[`streamText > result.toUIMessageStreamResponse > should mask error messages by default 1`] = `
[
  "data: {"type":"start"}

",
  "data: {"type":"start-step"}

",
  "data: {"type":"error","errorText":"error"}

",
  "data: {"type":"finish-step"}

",
  "data: {"type":"finish","finishReason":"error"}

",
  "data: [DONE]

",
]
`;

exports[`streamText > result.toUIMessageStreamResponse > should support custom error messages 1`] = `
[
  "data: {"type":"start"}

",
  "data: {"type":"start-step"}

",
  "data: {"type":"error","errorText":"custom error message: error"}

",
  "data: {"type":"finish-step"}

",
  "data: {"type":"finish","finishReason":"error"}

",
  "data: [DONE]

",
]
`;

exports[`streamText > tools with custom schema > should send tool calls 1`] = `
[
  {
    "type": "start",
  },
  {
    "request": {},
    "type": "start-step",
    "warnings": [],
  },
  {
    "input": {
      "value": "value",
    },
    "providerExecuted": undefined,
    "providerMetadata": undefined,
    "title": "Tool 1",
    "toolCallId": "call-1",
    "toolName": "tool1",
    "type": "tool-call",
  },
  {
    "finishReason": "stop",
    "providerMetadata": undefined,
    "rawFinishReason": "stop",
    "response": {
      "headers": undefined,
      "id": "id-0",
      "modelId": "mock-model-id",
      "timestamp": 1970-01-01T00:00:00.000Z,
    },
    "type": "finish-step",
    "usage": {
      "cachedInputTokens": undefined,
      "inputTokenDetails": {
        "cacheReadTokens": undefined,
        "cacheWriteTokens": undefined,
        "noCacheTokens": 3,
      },
      "inputTokens": 3,
      "outputTokenDetails": {
        "reasoningTokens": undefined,
        "textTokens": 10,
      },
      "outputTokens": 10,
      "raw": undefined,
      "reasoningTokens": undefined,
      "totalTokens": 13,
    },
  },
  {
    "finishReason": "stop",
    "rawFinishReason": "stop",
    "totalUsage": {
      "cachedInputTokens": undefined,
      "inputTokenDetails": {
        "cacheReadTokens": undefined,
        "cacheWriteTokens": undefined,
        "noCacheTokens": 3,
      },
      "inputTokens": 3,
      "outputTokenDetails": {
        "reasoningTokens": undefined,
        "textTokens": 10,
      },
      "outputTokens": 10,
      "reasoningTokens": undefined,
      "totalTokens": 13,
    },
    "type": "finish",
  },
]
`;
